- Shell doctor output now includes `ReportViewerStartFailCount` so operator triage can confirm current startup-failure state.
- Shell doctor now supports `-RepairReportViewer` to reset viewer state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) in one command.
- Launchpad Doctor now includes `Repair Viewer`, which runs shell-doctor repair mode and reports deterministic repair output headers/status.
- Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
- Evidence typing added to operator reports (additive, non-breaking):
- `report_card.txt` now includes an evidence legend and claim mapping lines:
- `EVIDENCE TAGS: ...`
- `evidence.classification=[INF]`
- `evidence.observed=[OBS]`
- `evidence.posture=[POL]`
- `evidence.privacyLint=[SYS]`
- `evidence.buildDigest=[SYS]`
- `report_card_v0.json` now includes additive `evidence` metadata (`legend` and `claims`) aligned with the text report.
- `compare_report.txt` now includes additive evidence legend/claim mapping lines (including `verdict=[POL]`, `buckets=[INF]`, `artifactDigest=[OBS]`).
- Contracts updated to pin this behavior (`report_card_contract` and `compare_cli_smoke`).
- Additional output finalize hardening (current unreleased batch):
- Compare text artifacts now use per-file stage/finalize writes within staged out-root finalize.
- Ticket-pack text artifacts now use per-file stage/finalize writes within `ticket_pack.stage` finalize flow.
- `safe-run`, `run`, and `examine` text artifact writers now use per-file stage/finalize writes.
- `email unpack` export text artifacts and attachment file writes now use per-file stage/finalize writes.
- `intake` staged outputs now write per-file stage/finalize before out-root finalize.